--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">映画URL</label>
         </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">採点</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>-- 選択 --</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+        </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
             <label for="floatingTextarea">コメント</label>
@@ -100,7 +111,6 @@
             <button type="button" class="btn btn-outline-dark">閉じる</button>
         </div>
     </div>
-
     <div class="mycards">
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
